--- a/Source/index.html
+++ b/Source/index.html
@@ -13,7 +13,7 @@
     <div class="mainBox">
         <div class="wrapper shadow">
             <form class="form">
-                <input class="form-control" type="text" maxlength="19" placeholder="Type sth...">
+                <input class="form-control" type="text" maxlength="19" placeholder="username">
                 <span>@</span>
                 <span class="counter">19</span>
             </form>
